<resources>
    <string name="app_name">MyAuction</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">SIGN UP</string>
    <string name="phone">Phone NO</string>
    <string name="address">Address</string>
    <string name="newaccount">Create new account!</string>
    <string name="haveccount">Already have account!</string>
    <string name="verifyEmail">Please check your email and click on the sent link to verify your account !</string>
    <string name="about">Enjoy selling and buying exclusive items on MyAuction Platform with simple steps and safe environment.</string>
    <string name="name">Name</string>
    <string name="uemail">Email</string>
    <string name="not_found">Not found !</string>
    <string name="hi_again">Hi again !</string>
    <string name="sale_items">Sell Items</string>
    <string name="purchases">Purchases</string>
    <string name="current_bidding">Current Bidding</string>
    <string name="myauction_store">MyAuction Store</string>
    <string name="find_what_is_new_today">Find what is new today !</string>
    <string name="sold_items">Sold items</string>
    <string name="let_s_do_some_management">Let\'s do some management</string>
    <string name="sell_item_on_the_auction">Sell Item On The Auction</string>
    <string name="lets_fill_up_the_needed_details">Lets fill up the needed details</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_price">Start Price</string>
    <string name="upload_the_item_photo">Upload the item photo</string>
    <string name="sell">Post on the Auction</string>
    <string name="view_items">View My Items</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="page_title">Page Title</string>
    <string name="view_all">View all</string>
    <string name="new_items">New Items</string>
    <string name="price">Price</string>
    <string name="bidder">Bidder</string>
    <string name="bid">Bid</string>
    <string name="similar">Similar</string>
    <string name="bid_price">Enter Bid Price</string>
    <string name="current_bidding_price">Current Bidding Price</string>
    <string name="start_price">Start Price</string>
    <string name="stop_auction">Stop Auction and Sell</string>
    <string name="the_winner_of_the_bidding_will_be_the_bidder_who_paid_more">The winner of the bidding will be the bidder who paid more !</string>
    <string name="sold_price">Sold Price</string>
    <string name="seller_email">Seller Email</string>
    <string name="please_contact_the_seller_to_complete_the_payment_process_and_delivery">Please contact the seller to complete the payment process and delivery</string>
    <string name="buyer_email">Buyer Email</string>


</resources>