<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:src="@drawable/myicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/text_name"
        android:drawableTint="@color/colorPrimary"
        android:drawableStart="@drawable/person"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/text_phone"
        android:drawableTint="@color/colorPrimary"
        android:drawableStart="@drawable/phone"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/text_address"
        android:drawableTint="@color/colorPrimary"
        android:drawableStart="@drawable/address"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />


    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/text_email"
        android:drawableTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_address" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:drawableTint="@color/colorPrimary"
        android:drawableStart="@drawable/password"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        app:layout_constraintVertical_bias="0.0" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:onClick="onRegisterActivity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:drawableEnd="@drawable/simle"
        android:drawableTint="@color/white"
        android:text="@string/register"
        android:textStyle="bold"
        android:textAlignment="center"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.287" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password"
        android:onClick="onLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autoLink="web"
        android:text="@string/haveccount"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.347" />


</androidx.constraintlayout.widget.ConstraintLayout>




