<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="200dp"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_margin="3dp"
app:cardCornerRadius="20dp"
android:id="@+id/itemCardView"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_circular_border"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/citemImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">
        <TextView
            android:id="@+id/citemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/citemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginStart="5dp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="10sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/cBiddingNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/bidder"
                android:textColor="@color/textColor"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


</androidx.cardview.widget.CardView >