<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <!--Body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="2dp"
            android:padding="10dp"
            android:id="@+id/CardView"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <TextView
                        android:id="@+id/cTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_title"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_margin="1dp">

                        <TextView
                            android:id="@+id/cCurrentPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_bidding_price"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <TextView
                            android:id="@+id/cBiddingNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/bidder"
                            android:textColor="@color/textColor"
                            android:textStyle="bold"
                            android:textSize="14sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_margin="1dp">
                        <TextView
                            android:id="@+id/cstartPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_price"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <EditText
                            android:id="@+id/cBiddingPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:hint="@string/bid_price"
                            android:textColorHint="@color/textColor"
                            android:inputType="number"
                            android:textColor="@color/textColor"
                            android:textStyle="normal"
                            android:textSize="14sp" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/cbtBid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:drawableEnd="@drawable/hand"
                            android:drawableTint="@color/white"
                            android:padding="5dp"
                            android:onClick="onBidding"
                            android:text="@string/bid"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="100"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:textAlignment="center"
                            android:text="@string/item_description"
                            android:background="@color/colorPrimary"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="100"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:id="@+id/cDesc"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:layout_margin="5dp"
                            android:textAlignment="textStart"
                            android:text="@string/not_found"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>