<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="7dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:id="@+id/CardView"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/vcardImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/img" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/item_title"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/vcardTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:padding="10dp"
                        android:inputType="text"
                        android:text="@string/not_found"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:lines="1"
                        android:padding="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/item_description"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/vcardDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:padding="10dp"
                        android:inputType="textMultiLine"
                        android:text="@string/not_found"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:lines="1"
                        android:padding="10dp"
                        android:text="@string/item_price"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:id="@+id/vcardPrice"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:inputType="number"
                        android:text="Not found!"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/vcardUpdate"
                        android:drawableEnd="@drawable/update"
                        android:drawableTint="@color/white"
                        android:backgroundTint="@color/colorPrimary"
                        android:padding="10dp"
                        android:layout_margin="15dp"
                        android:text="@string/update"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vcardDelete"
                        android:drawableEnd="@drawable/delete"
                        android:drawableTint="@color/white"
                        android:backgroundTint="@color/red"
                        android:padding="10dp"
                        android:layout_margin="15dp"
                        android:text="@string/delete"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>